TSP-215 - Custom products step-by-step: Wrap issue

--- a/Resources/app/storefront/src/scss/abstract/variables/_bootstrap.scss
+++ b/Resources/app/storefront/src/scss/abstract/variables/_bootstrap.scss
@@ -142,3 +142,13 @@ $modal-content-bg: $shape-gray-100;
 
 // Order
 $order-grid-gutter-width: 24px !default;
+
+// Grid breakpoints
+$grid-breakpoints: (
+    xs: 0,
+    sm: 576px,
+    md: 768px,
+    lg: 992px,
+    xl: 1200px,
+    xxl: 1400px
+) !default;
